--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,9 +15,7 @@
         </div>
         <ul class="navbar-nav ml-md-auto d-none d-lg-flex">
             <li class="nav-item">
-                <a class="nav-link p-2" href="mailto:tophackr@icloud.com" target="_blank" rel="noopener" data-toggle="tooltip" title="{{ site.data.langs[page.lang].contact_us | default: site.data.langs['en'].contact_us }}" aria-label="Email">
-                    <i class="far fa-envelope fa-fw fa-lg"></i>
-                </a>
+                <a class="nav-link p-2" href="mailto:tophackr@icloud.com" target="_blank" rel="noopener" data-toggle="tooltip" title="{{ site.data.langs[page.lang].contact_us | default: site.data.langs['en'].contact_us }}" aria-label="Email">📧</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="calendarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
