--- a/_layouts/calendar.html
+++ b/_layouts/calendar.html
@@ -96,6 +96,7 @@ default_lang: ru
                     <tbody class="card-body">
                 </table>
     </table>
+    <div class="text-left">{{ site.data.langs[page.lang].add_date | default: site.data.langs['en'].add_date }}</div>
 </div>
 
 <div id="calendarTable">
