--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light shadow">
     <div class="container">
-        <a class="navbar-brand" href="{{ '/' | relative_url }}">{{ site.data.langs[page.lang].sitename | default: site.data.langs['en'].sitename }}</a>
+        <a class="navbar-brand" href="{{ '/' | relative_url }}">📅 {{ site.data.langs[page.lang].sitename | default: site.data.langs['en'].sitename }}</a>
 
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#tophackr-navbar" aria-controls="tophackr-navbar" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
