added visual footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,14 @@
 
+<footer class="container font-weight-light my-5">
+    <div class="row">
+        <div class="col-md-12">
+            <span class="float-right">
+                <a href="https://tophackr.com" class="text-dark">tophackr</a> &copy; {{ 'now' | date: '%Y' }}
+            </span>
+        </div>
+    </div>
+</footer>
+
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" type="text/javascript"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" type="text/javascript"></script>
