--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -19,13 +19,13 @@
                     <a class="nav-link" href="{{ '📣' | append: '/' | relative_url }}" data-toggle="tooltip" title="{{ site.data.langs[url_navbar].ad }}">📣</a>
                 </li>-->
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ '➕' | append: '/' | relative_url }}" data-toggle="tooltip" title="{{ site.data.langs[url_navbar].add_date }}">➕</a>
+                    <a class="nav-link" href="{{ '🗓' | append: '/' | relative_url }}" data-toggle="tooltip" title="{{ site.data.langs[url_navbar].add_date }}">🗓</a>
                 </li>
             </ul>
         </div>
         <ul class="navbar-nav ml-md-auto d-none d-lg-flex">
             <li class="nav-item">
-                <a class="nav-link p-2" href="mailto:tophackr@icloud.com" target="_blank" rel="noopener" data-toggle="tooltip" title="{{ site.data.langs[url_navbar].contact_us }}" aria-label="Email">📧</a>
+                <a class="nav-link p-2" href="mailto:tophackr@icloud.com" target="_blank" rel="noopener" data-toggle="tooltip" title="{{ site.data.langs[url_navbar].contact_us }}" aria-label="Email">📮</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="calendarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
