--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="row justify-content-center py-5">
+<div class="row justify-content-center my-5">
     <div class="col-md-6">
         {{ content }}
     </div>
