optimized for mobile version

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -19,26 +19,25 @@
                     <a class="nav-link" href="{{ '📣' | append: '/' | relative_url }}" data-toggle="tooltip" title="{{ site.data.langs[url_navbar].ad }}">📣</a>
                 </li>-->
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ '🗓' | append: '/' | relative_url }}" data-toggle="tooltip" title="{{ site.data.langs[url_navbar].add_date }}">🗓</a>
+                    <a class="nav-link" href="{{ '🗓' | append: '/' | relative_url }}" data-toggle="tooltip" title="{{ site.data.langs[url_navbar].add_date }}">🗓<span class="d-lg-none d-xl-none"> {{ site.data.langs[url_navbar].add_date }}</span></a>
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-md-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="mailto:tophackr@icloud.com" target="_blank" rel="noopener" data-toggle="tooltip" title="{{ site.data.langs[url_navbar].contact_us }}" aria-label="Email">📮<span class="d-lg-none d-xl-none"> {{ site.data.langs[url_navbar].contact_us }}</span></a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="calendarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ site.data.langs[url_navbar].icon }}<span class="d-lg-none d-xl-none"> {{ site.data.langs[url_navbar].change_lang }}</span></a>
+                    <div class="dropdown-menu" aria-labelledby="calendarDropdown">
+                        {%- for language in site.data.langs -%}
+                        <a class="dropdown-item{% if language[0] == url_navbar %} active{% endif %}" href="{{ language[1].icon | append: '/' | relative_url }}">{{ language[1].icon | append: language[1].name }}</a>
+                        {%- endfor -%}
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item disabled" href="#">{{ site.data.langs[url_navbar].translate }}</a>
+                    </div>
                 </li>
             </ul>
         </div>
-        <ul class="navbar-nav ml-md-auto d-none d-lg-flex">
-            <li class="nav-item">
-                <a class="nav-link p-2" href="mailto:tophackr@icloud.com" target="_blank" rel="noopener" data-toggle="tooltip" title="{{ site.data.langs[url_navbar].contact_us }}" aria-label="Email">📮</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="calendarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  {{ site.data.langs[url_navbar].icon }}
-                </a>
-                <div class="dropdown-menu" aria-labelledby="calendarDropdown">
-                    {%- for language in site.data.langs -%}
-                    <a class="dropdown-item{% if language[0] == url_navbar %} active{% endif %}" href="{{ language[1].icon | append: '/' | relative_url }}">{{ language[1].icon | append: language[1].name }}</a>
-                    {%- endfor -%}
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item disabled" href="#">{{ site.data.langs[url_navbar].translate }}</a>
-                </div>
-            </li>
-        </ul>
+        
     </div>
 </nav>
