--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 <footer class="container font-weight-light my-5">
     <div class="row">
         <div class="col-md-12">
-            <a class="float-left dropdown-toggle" href="#" id="footerDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><script type="text/javascript">document.write(location.host)</script></a>
+            <a class="float-left dropdown-toggle" href="#" id="footerDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Change domain</a>
             <div class="dropdown-menu" aria-labelledby="footerDropdown">
                 {%- for domain_footer in site.data.domains -%}
                 <a class="dropdown-item" href="{{ domain_footer | prepend: 'https://' }}">{{ domain_footer }}</a>
