--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
         #calendarBig table tbody td:nth-child(n+6) { color: #ffc107; }
     </style>
 
-    <link rel="shortcut icon" href="{{ '/favicon.ico' | relative_url }}">
+    <link rel="shortcut icon" href="{{ '/favicon.ico' | relative_url }}" type="image/x-icon">
 
     {% include analytics.html %}
     {%- if page.slug -%}
