--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
         {%- endif -%}
     </title>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" crossorigin="anonymous">
 
     <style>
         #calendarBig table tbody td:nth-child(n+6) { color: #ffc107; }
