changed some links to new format

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -16,10 +16,10 @@
         <div class="navbar-collapse collapse" id="calendar-navbar">
             <ul class="navbar-nav">
                 <!--<li class="nav-item">
-                    <a class="nav-link" href="{{ '📣' | append: '/' | relative_url }}" data-toggle="tooltip" title="{{ site.data.langs[url_navbar].ad }}">📣</a>
+                    <a class="nav-link" href="{% link 📣.md %}" data-toggle="tooltip" title="{{ site.data.langs[url_navbar].ad }}">📣</a>
                 </li>-->
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ '🗓' | append: '/' | relative_url }}" data-toggle="tooltip" title="{{ site.data.langs[url_navbar].add_date }}">🗓<span class="d-lg-none d-xl-none"> {{ site.data.langs[url_navbar].add_date }}</span></a>
+                    <a class="nav-link" href="{% link 🗓.md %}" data-toggle="tooltip" title="{{ site.data.langs[url_navbar].add_date }}">🗓<span class="d-lg-none d-xl-none"> {{ site.data.langs[url_navbar].add_date }}</span></a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-md-auto">
