changed url for comment block

--- a/_layouts/date.html
+++ b/_layouts/date.html
@@ -27,7 +27,7 @@ layout: page
 var disqus_config = function () {
     {%- assign url_date = page.url | split: "/" | last -%}
     {%- assign url_date2 = url_date | prepend: '/' | prepend: page.slug | prepend: '/' | append: '/' -%}
-    this.page.url = '{{ 'https://xn--et8h.ml' | append: page.url | relative_url }}';
+    this.page.url = '{{ 'https://emojicalendar.tophackr.com' | append: page.url | relative_url }}';
     this.page.identifier = '{{ url_date2 | relative_url }}';
     this.language = '{{ page.slug }}';
 };
