--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -16,7 +16,7 @@
         <div class="navbar-collapse collapse" id="calendar-navbar">
             <ul class="navbar-nav">
                 <!--<li class="nav-item">
-                    <a class="nav-link" href="{% link adverstising.md %}" data-toggle="tooltip" title="{{ site.data.langs[url_navbar].ad }}">📣</a>
+                    <a class="nav-link" href="{% link advertising.md %}" data-toggle="tooltip" title="{{ site.data.langs[url_navbar].ad }}">📣</a>
                 </li>-->
                 <li class="nav-item">
                     <a class="nav-link" href="{% link add_date.md %}" data-toggle="tooltip" title="{{ site.data.langs[url_navbar].add_date }}">🗓<span class="d-lg-none d-xl-none"> {{ site.data.langs[url_navbar].add_date }}</span></a>
