--- a/_layouts/date.html
+++ b/_layouts/date.html
@@ -3,6 +3,8 @@ layout: page
 ---
 
 {%- include config.html item1=page.date -%}
+<img src="{{ page.image | relative_url }}" class="img-fluid rounded" alt="Responsive image">
+<hr>
 <h1>{{ page.title }}</h1>
 <div class="row justify-content-center">
     <div class="col-12">
