--- a/_layouts/calendar.html
+++ b/_layouts/calendar.html
@@ -4,11 +4,13 @@ layout: default
 
 <div class="row justify-content-center my-5">
     <div class="col-lg-12 col-xl-10">
-        
+
         <div id="calendarBig" class="row">
-            <div id="prev" class="btn-link text-center col-sm-12 col-md-12 col-lg-3" style="cursor: pointer;"></div>
-            <div id="now" class="h4 text-center col-sm-12 col-md-12 col-lg-6 pb-3" style="text-decoration: underline;"></div>
-            <div id="next" class="btn-link text-center col-sm-12 col-md-12 col-lg-3" style="cursor: pointer;"></div>
+
+            <div id="prev" class="btn-link text-center col-sm-12 col-lg-3" style="cursor: pointer;"></div>
+            <div id="now" class="h4 text-center col-sm-12 col-lg-6 pb-3" style="text-decoration: underline;"></div>
+            <div id="next" class="btn-link text-center col-sm-12 col-lg-3" style="cursor: pointer;"></div>
+
             {%- for months in (0..11) -%}
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <table class="table table-borderless card mb-4" data-m="{{ months }}">
@@ -28,10 +30,11 @@ layout: default
                 </table>
             </div>
             {%- endfor -%}
-        </div>
 
-    </div>
-</div>
+        </div><!-- /#calendarBig -->
+
+    </div><!-- /.col -->
+</div><!-- /.row -->
 
 <div id="calendarTable">
     {%- for dates in site.posts -%}
