--- a/_layouts/date.html
+++ b/_layouts/date.html
@@ -6,24 +6,28 @@ layout: page
 <img src="{{ page.image | relative_url }}" class="img-fluid rounded" alt="Responsive image">
 <hr>
 <h1>{{ page.title }}</h1>
+
 <div class="row justify-content-center">
     <div class="col-12">
-        <ul class="float-left list-inline">
-            <li class="list-inline-item">📆{{ page.date | date: ' %d, %Y' | prepend: m_config2 }}</li>
+
+        <div class="d-flex flex-column flex-md-row">
+            <div class="mb-2 pr-3">📆{{ page.date | date: ' %d, %Y' | prepend: m_config2 }}</div>
             {%- if page.author -%}
-            <li class="list-inline-item">
+            <div class="mb-2 pr-3">
                 <img src="https://www.gravatar.com/avatar/{{ page.author.email | remove: ' ' | strip_newlines | downcase | md5 }}?d=retro" class="rounded align-text-top" width="20" height="20">
                 <a href="{{ page.author.email | prepend: 'mailto:' }}">{{ page.author.name }}</a>
-            </li>
+            </div>
             {%- endif -%}
             {%- if page.category -%}
-            <li class="list-inline-item">🗂️{{ page.category | join: ', ' }}</li>
+            <div class="mb-3 pr-3">🗂️{{ page.category | join: ', ' }}</div>
             {%- endif -%}
-        </ul>
-        <div class="float-right ya-share2" data-services="facebook,twitter,vkontakte,telegram,whatsapp,viber,skype,linkedin,tumblr,reddit,blogger,lj" data-limit="4" data-lang="{{ page.slug }}"></div>
+            <div class="mb-3 ml-md-auto ya-share2" data-services="facebook,twitter,vkontakte,telegram,whatsapp,viber,skype,linkedin,tumblr,reddit,blogger,lj" data-limit="4" data-lang="{{ page.slug }}"></div>
+        </div>
+
     </div>
 </div>
 {{ content }}
+
 <div id="disqus_thread"></div>
 <script>
 var disqus_config = function () {
