--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="row justify-content-center my-5">
-    <div class="col-md-6">
+    <div class="col-md-10 col-lg-8 col-xl-6">
         {{ content }}
     </div>
 </div>
