--- a/_layouts/calendar.html
+++ b/_layouts/calendar.html
@@ -7,9 +7,9 @@ layout: default
 
         <div id="calendarBig" class="row">
 
-            <div id="prev" class="btn-link text-center col-sm-12 col-lg-3" style="cursor: pointer;"></div>
-            <div id="now" class="h4 text-center col-sm-12 col-lg-6 pb-3" style="text-decoration: underline;"></div>
-            <div id="next" class="btn-link text-center col-sm-12 col-lg-3" style="cursor: pointer;"></div>
+            <div id="prev" class="btn-link text-center col-sm-12 col-lg-3 mb-3" style="cursor: pointer;"></div>
+            <div id="now" class="h4 text-center col-sm-12 col-lg-6 mb-3" style="text-decoration: underline;"></div>
+            <div id="next" class="btn-link text-center col-sm-12 col-lg-3 mb-3" style="cursor: pointer;"></div>
 
             {%- for months in (0..11) -%}
             <div class="col-sm-6 col-md-4 col-lg-3">
