moved tripleday to other file

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,90 +10,7 @@
 
     <div class="container-fluid">
 
-        <div class="row justify-content-center my-5">
-            <div class="col-md-10">
-
-                <div class="card-group">
-
-                    {%- if page.lang -%}
-                        {%- assign url_default = page.lang -%}
-                    {%- elsif page.slug -%}
-                        {%- assign url_default = page.slug -%}
-                    {%- else -%}
-                        {%- assign url_default = 'en' -%}
-                    {%- endif -%}
-                    {%- assign now_default = 'now' | date: '%s' -%}
-                    {%- assign now_default2 = 'now' | date: '%s' | minus: 86400 -%}
-                    {%- assign now_default3 = 'now' | date: '%s' | plus: 86400 -%}
-                    {%- capture year_default -%}{{ site.data.langs[url_default].calendar_on_3 }}{%- endcapture -%}
-
-                    <div class="card border-warning">
-                        <div class="card-header bg-warning">{{ site.data.langs[url_default].yesterday }}</div>
-                        <div class="card-body">
-                            {%- include config.html item1=now_default2 -%}
-                            {%- assign w_default = w_config2 | downcase -%}
-                            📆{{ now_default2 | date: ' %d, %Y' | prepend: m_config2 | append: year_default | append: ', ' | append: w_default }}<br>
-                            {%- assign without_date_default2 = true -%}
-                            {%- for now_dates_default4 in site.posts -%}
-                                {%- assign now_dates_default5 = now_dates_default4.date | date: '%d, %Y' -%}
-                                {%- assign now_dates_default6 = now_default2 | date: '%d, %Y' -%}
-                                {%- if now_dates_default5 == now_dates_default6 and now_dates_default4.slug == url_default or now_dates_default4.slug == null -%}
-                            <a href="{{ now_dates_default4.url | relative_url }}" class="text-dark">{{ now_dates_default4.title }}</a>
-                                    {%- assign without_date_default2 = false -%}
-                                {%- endif -%}
-                                {%- if without_date_default2 -%}
-                                    {{ site.data.langs[url_default].without_date }}
-                                {%- endif -%}
-                            {%- endfor -%}
-                        </div>
-                    </div>
-
-                    <div class="card border-warning">
-                        <div class="card-header bg-warning">{{ site.data.langs[url_default].today }}</div>
-                        <div class="card-body">
-                            {%- include config.html item1=now_default -%}
-                            {%- assign w_default = w_config2 | downcase -%}
-                            📆{{ now_default | date: ' %d, %Y' | prepend: m_config2 | append: year_default | append: ', ' | append: w_default }}<br>
-                            {%- assign without_date_default = true -%}
-                            {%- for now_dates_default in site.posts -%}
-                                {%- assign now_dates_default2 = now_dates_default.date | date: '%d, %Y' -%}
-                                {%- assign now_dates_default3 = now_default | date: '%d, %Y' -%}
-                                {%- if now_dates_default2 == now_dates_default3 and now_dates_default.slug == url_default or now_dates_default.slug == null -%}
-                            <a href="{{ now_dates_default.url | relative_url }}" class="text-dark">{{ now_dates_default.title }}</a>
-                                    {%- assign without_date_default = false -%}
-                                {%- endif -%}
-                                {%- if without_date_default -%}
-                                    {{ site.data.langs[url_default].without_date }}
-                                {%- endif -%}
-                            {%- endfor -%}
-                        </div>
-                    </div>
-
-                    <div class="card border-warning">
-                        <div class="card-header bg-warning">{{ site.data.langs[url_default].tomorrow }}</div>
-                        <div class="card-body">
-                            {%- include config.html item1=now_default3 -%}
-                            {%- assign w_default = w_config2 | downcase -%}
-                            📆{{ now_default3 | date: ' %d, %Y' | prepend: m_config2 | append: year_default | append: ', ' | append: w_default }}<br>
-                            {%- assign without_date_default3 = true -%}
-                            {%- for now_dates_default7 in site.posts -%}
-                                {%- assign now_dates_default8 = now_dates_default7.date | date: '%d, %Y' -%}
-                                {%- assign now_dates_default9 = now_default3 | date: '%d, %Y' -%}
-                                {%- if now_dates_default8 == now_dates_default9 and now_dates_default7.slug == url_default or now_dates_default7.slug == null -%}
-                            <a href="{{ now_dates_default7.url | relative_url }}" class="text-dark">{{ now_dates_default7.title }}</a>
-                                    {%- assign without_date_default3 = false -%}
-                                {%- endif -%}
-                                {%- if without_date_default3 -%}
-                                    {{ site.data.langs[url_default].without_date }}
-                                {%- endif -%}
-                            {%- endfor -%}
-                        </div>
-                    </div>
-
-                </div><!-- /.card-group -->
-
-            </div><!-- /.col -->
-        </div><!-- /.row -->
+        {% include tripleday.html %}
 
         {{ content }}
 
